--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onions/core",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -24,5 +24,6 @@
     "react": "^18.2.0"
   },
   "author": "tiepnt",
-  "description": ""
+  "description": "",
+  "gitHead": "05343e1c34f8d22ccffc898e13f2bff32a1da662"
 }
