--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onions/api",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -24,5 +24,8 @@
     "@emotion/styled": "11.3.0",
     "react": "^18.2.0"
   },
-  "gitHead": "1c8ba9e18015ad60732c2808959c11da04e39217"
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "a5a576917ec389274fb063afd9ad103ddf5954a0"
 }
