--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "onions",
   "packageManager": "yarn@3.2.4",
+  "private":true,
   "workspaces": {
     "packages": [
       "packages/*"
@@ -31,9 +32,5 @@
   },
   "dependencies": {
     "react": "^18.2.0"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com",
-    "access": "public"
   }
 }
