--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,9 @@
   "version": "independent",
   "command": {
     "publish": {
-      "conventionalCommits": true
+      "conventionalCommits": true, 
+      "content": "./dist"
     }
   }
+
 }
