--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "packages": ["packages/**"],
+  "packages": ["packages/core"],
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "independent",
