--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "onions",
+  "name": "onions-ui",
   "packageManager": "yarn@3.2.4",
-  "private":true,
+  "private": true,
   "workspaces": {
     "packages": [
       "packages/*"
