--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@onions/core",
-  "version": "0.0.7",
+  "name": "@onions-ui/core",
+  "version": "0.0.8",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -28,5 +28,5 @@
   },
   "author": "tiepnt",
   "description": "",
-  "gitHead": "2a7e4c8c1ef700289bcbbc2d8831c4d0d7cd849c"
+  "gitHead": "b7126e0fa7b4485c0f3ff04cf52910944b9bdec0"
 }
