--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@tiep.nt/core",
-  "version": "0.0.13",
+  "name": "@onions-ui/core",
+  "version": "0.0.14",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -28,5 +28,5 @@
   },
   "author": "tiepnt",
   "description": "",
-  "gitHead": "fe1e07894ce2a4a1671f34f0b58310a62ecc3bb1"
+  "gitHead": "ce605c54022f555e9d0adb0beaf10c947490d86c"
 }
