--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@onions-ui/api",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
+   "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
