--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onions-ui/core",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -27,7 +27,8 @@
     "@emotion/cache": "11.5.0",
     "@emotion/react": "11.5.0",
     "@emotion/styled": "11.3.0",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "ts-lib": "^0.0.5"
   },
   "author": "tiepnt",
   "description": "",
