--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "packages/*"
+      "packages/*",
+      "sites/*"
     ]
   },
   "devDependencies": {
@@ -28,7 +29,7 @@
     "lint": "eslint --ext .tsx,.ts --ignore-path .eslintignore --quiet .",
     "test": "jest",
     "prepare": "yarn husky install && yarn build:packages",
-    "build:packages": "yarn workspaces foreach -ptR --from '@onions/*' run build"
+    "build:packages": "yarn workspaces foreach -ptR --from '@onions-ui/*' run build"
   },
   "dependencies": {
     "react": "^18.2.0"
