--- a/lerna.json
+++ b/lerna.json
@@ -1,12 +1,10 @@
 {
-  "packages": ["packages/core"],
+  "packages": ["packages/*"],
   "npmClient": "yarn",
-  "useWorkspaces": true,
   "version": "independent",
   "command": {
     "publish": {
-      "conventionalCommits": true, 
-      "content": "./dist"
+      "conventionalCommits": true
     }
   }
 
