--- a/sites/docs/package.json
+++ b/sites/docs/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@onions/core": "workspace:packages/core",
+    "@onions-ui/core": "workspace:packages/core",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
